--- a/class02_ppi_R_template.ipynb
+++ b/class02_ppi_R_template.ipynb
@@ -189,8 +189,7 @@
     }
    ],
    "source": [
-    "# how many rows are there in the protein-protein interaction edge-list?\n",
-    "nrow(interactions_df)"
+    "# how many rows are there in the protein-protein interaction edge-list?\n"
    ]
   },
   {
@@ -225,8 +224,7 @@
     }
    ],
    "source": [
-    "# how many unique proteins are there in the interaction network?\n",
-    "length(unique(c(interactions_df$species1, interactions_df$species2)))"
+    "# how many unique proteins are there in the interaction network?\n"
    ]
   },
   {
@@ -350,7 +348,7 @@
     "all(interactions_df5 == interactions_df)\n",
     "\n",
     "\n",
-    "print(sort(table(as.factor(my_df$interaction_type)), decreasing=TRUE))"
+    "## TODO:  make a factor out of the interaction_type column, call table on it, and then sort"
    ]
   },
   {
