--- a/class02_ppi_python3_template.ipynb
+++ b/class02_ppi_python3_template.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -52,8 +52,7 @@
       "b'A1BG\\tinteracts-with\\tACE2\\n'\n",
       "b'A1BG\\tinteracts-with\\tADAM10\\n'\n",
       "b'A1BG\\tinteracts-with\\tADAM17\\n'\n",
-      "b'A1BG\\tinteracts-with\\tADAM9\\n'\n",
-      "5.3486454999947455\n"
+      "b'A1BG\\tinteracts-with\\tADAM9\\n'\n"
      ]
     }
    ],
@@ -87,7 +86,11 @@
     "        \n",
     "    linectr += 1\n",
     "    \n",
-    "    [prot1, interaction_type, prot2] = line.decode(\"utf-8\").rstrip(\"\\n\").split(\"\\t\")\n",
+    "    linetext = line.decode(\"utf-8\").rstrip(\"\\n\")\n",
+    "    ## MISSING CODE HERE:\n",
+    "    ## make a tuple of [prot1, interaction_type, prot2\"] using the \"split\" method on \"linetext\"\n",
+    "\n",
+    "    \n",
     "    intnamectr[interaction_type] += 1\n",
     "    if interaction_type in interaction_types_ppi:\n",
     "        intctr += 1\n",
@@ -117,9 +120,7 @@
      ]
     }
    ],
-   "source": [
-    "print(elapsed)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -141,9 +142,7 @@
      ]
     }
    ],
-   "source": [
-    "print(intctr)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -168,9 +167,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "len(proteins)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -195,9 +192,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "len(interactions)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -261,8 +256,7 @@
    "source": [
     "import pandas\n",
     "zfd = urlopen(baseURL + filename)\n",
-    "fd = gzip.GzipFile(fileobj=zfd, mode=\"r\")\n",
-    "df = pandas.read_csv(fd, sep=\"\\t\", names=[\"species1\",\"interaction_type\",\"species2\"])"
+    "fd = gzip.GzipFile(fileobj=zfd, mode=\"r\")\n"
    ]
   },
   {
@@ -290,9 +284,7 @@
      ]
     }
    ],
-   "source": [
-    "print(df.head())"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -322,9 +314,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df.interaction_type.unique()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -349,10 +339,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "ppirows = df.interaction_type.isin(interaction_types_ppi)\n",
-    "sum(ppirows)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -377,10 +364,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "newlist = df[\"species1\"][ppirows].tolist() + df[\"species2\"][ppirows].tolist()\n",
-    "len(set(newlist))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -405,9 +389,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "len(set(df[\"species1\"][ppirows] + \"-\" + df[\"species2\"][ppirows]))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -445,9 +427,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "df[\"interaction_type\"].value_counts()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
