--- a/class04_storage_R.ipynb
+++ b/class04_storage_R.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Class Session 4 Exercise:\n",
-    "## Comparing asymptotic running time for enumerating vertex neighbors"
+    "## Comparing asymptotic running time for enumerating neighbors of all vertices in a graph"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "Define a function that enumerates the neighbors of a vertex i, when the \n",
-    "graph is stored in adjacency matrix format (ones and zeroes)"
+    "graph is stored in adjacency matrix format (ones and zeroes).  Use the `which` function."
    ]
   },
   {
@@ -57,7 +57,7 @@
    "metadata": {},
    "source": [
     "Define a function that enumerates the neighbors of a vertex i, when the \n",
-    "graph is stored in adjacency list format"
+    "graph is stored in adjacency list format. Use the `[[` function (i..e, array indexing)."
    ]
   },
   {
@@ -78,7 +78,7 @@
    "metadata": {},
    "source": [
     "Define a function that enumerates the neighbors of a vertex i, when the \n",
-    "graph is stored in edge-list format"
+    "graph is stored in edge-list format.  Use the `which` function and then the `c` (concatenate) function."
    ]
   },
   {
@@ -107,9 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dosim <- function(n) {\n",
@@ -179,9 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nvals <- c(1000, 2000, 3000, 4000, 5000)\n",
@@ -198,9 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sim_data_list_rescaled <- lapply(sim_data_list, function(v) {v*1000})"
@@ -216,9 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -379,9 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sim_data_list_df <- data.frame(network_size=as.factor(nvals),\n",
@@ -398,9 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -454,9 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "library(dplyr)\n",
@@ -474,9 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -560,9 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {},
@@ -598,7 +580,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.2.2"
+   "version": "3.4.1"
   }
  },
  "nbformat": 4,
