--- a/class04_storage_python3.ipynb
+++ b/class04_storage_python3.ipynb
@@ -5,27 +5,28 @@
    "metadata": {},
    "source": [
     "# Class Session 4 Exercise:\n",
-    "## Comparing asymptotic running time for enumerating vertex neighbors"
+    "## Comparing asymptotic running time for enumerating neighbors of all vertices in a graph"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will measure the running time for enumerating the neighbor vertices for three different data structures for representing the graph:\n",
+    "We will measure the running time for enumerating the neighbor vertices for three different data structures for representing an undirected graph:\n",
     "    adjacency matrix\n",
     "    adjacency list\n",
     "    edge list\n",
-    "    \n",
-    "First, we import all the Python modules that we will need for this exercise:"
+    "\n",
+    "Let's assume that each vertex is labeled with a unique integer number.  So if there are N vertices, the vertices are labeled 0, 2, 3, 4, ..., N-1.\n",
+    "\n",
+    "First, we will import all of the Python modules that we will need for this exercise:\n",
+    "note how we assign a short name, \"np\" to the numpy module. This will save typing. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -38,16 +39,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a function that enumerates the neighbors of a vertex i, when the \n",
-    "graph is stored in adjacency matrix format"
+    "Now, define a function that returns the index numbers of the neighbors of a vertex i, when the \n",
+    "graph is stored in adjacency matrix format.  So your function will accept as an input a NxN numpy matrix."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def enumerate_matrix(gmat, i):\n",
@@ -59,15 +58,13 @@
    "metadata": {},
    "source": [
     "Define a function that enumerates the neighbors of a vertex i, when the \n",
-    "graph is stored in adjacency list format"
+    "graph is stored in adjacency list format (a list of lists):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def enumerate_adj_list(adj_list, i):\n",
@@ -79,15 +76,13 @@
    "metadata": {},
    "source": [
     "Define a function that enumerates the neighbors of a vertex i, when the \n",
-    "graph is stored in edge-list format"
+    "graph is stored in edge-list format (a numpy array of length-two-lists); use `numpy.where` and `numpy.unique`:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def enumerate_edge_list(edge_list, i):\n",
@@ -108,10 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def do_sim(n):\n",
@@ -173,18 +166,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.14328251,  0.00177659,  0.3966931 ])"
+       "array([ 0.13381058,  0.00126239,  0.36279364])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,18 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.20474197,  0.00181276,  0.53985972])"
+       "array([ 0.20205601,  0.00127165,  0.51099831])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,6 +210,13 @@
    "source": [
     "do_sim(2000)*1000"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -239,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
