--- a/class05_find_R.ipynb
+++ b/class05_find_R.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Class Session 5 Exercise:\n",
+    "# CS446/546 Class Session 5 - Adjacency Forests\n",
+    "\n",
     "## Comparing asymptotic running time for testing two vertices for an edge"
    ]
   },
@@ -12,21 +13,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will measure the running time for testing whether two vertices (i and j) have an edge between them, for three different data structures for representing the graph:\n",
-    "    adjacency matrix\n",
-    "    adjacency list\n",
-    "    adjacency forest (aka adjacency tree)\n",
-    "    \n",
+    "In this exercise, we'll compare the asymptotic computational running time for testing if there is an edge between a pair of vertices, averaged over all pairs of vertices in the graph. We'll do it for a series of undirected graphs (each generated using an Barabasi-Albert model), each with 1000 vertices. We will vary the number of edges in the graph; each graph will have a different average number of vertex neighbors for a vertex (i.e., each graph will have a different average vertex degree). We will time how long it takes to test all possible pairs of vertices for whether or not there is an edge between them, for each of four different graph data structures (adjacency matrix, adjacency list, edge list, and adjacency forest)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First, we import all the R packages that we will need for this exercise:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: 'igraph'\n",
+      "\n",
+      "The following objects are masked from 'package:stats':\n",
+      "\n",
+      "    decompose, spectrum\n",
+      "\n",
+      "The following object is masked from 'package:base':\n",
+      "\n",
+      "    union\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(igraph)"
    ]
@@ -35,17 +54,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll define a function that can make an \"adjacency forest\" (aka adjacency tree) from the adjacency list for a graph:\n",
-    "\n",
-    "### BUGFIX from 2016.10.05:  you have to call \"as.vector\" on adj_list[[i]], and you have to return \"myforest\" at the end of the function"
+    "We'll need to start by creating a function `get_adj_tree` that will accept an adjacency list data structure and will create an \"adjacency forest\" data structure representing the graph.  NOTE:  I have deleted the line of code that creates a new environment; see `?new.env` for help."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "get_adj_tree <- function(adj_list) {\n",
@@ -64,34 +79,72 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "Then, we will define functions for testing whether vertices i and j are neighbors, for each of four different graph data structures (adjacency matrix, adjacency list, edge list, and adjacency tree):"
+    "Now, define a function that will test whether vertices `i` and `j` are connected, using an adjacency matrix:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "find_matrix <- function(gmat, i, j) {\n",
     "    gmat[i, j] == 1\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, define a function that will test whether vertices `i` and `j` are connected, using an adjacency list. You may find the function `%in%` useful:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "find_adj_list <- function(adj_list, i, j) {\n",
     "    j %in% adj_list[[i]]\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, define a function that will test whether vertices `i` and `j` are connected, using an edge list.  You may find the function `any` useful:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "find_edge_list <- function(edge_list, i, j) {\n",
     "    any((edge_list[,1] == i) & (edge_list[,2] == j)) | \n",
     "        any((edge_list[,2] == i) & (edge_list[,1] == j))\n",
-    "} # this function we won't use, since we know it is going to be super slow\n",
-    "\n",
+    "} \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, define a function that will test whether vertices `i` and `j` are connected, using an adjacency forest.  You may find the function ``is.null`` useful:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "find_adj_tree <- function(adj_tree, i, jstr) {\n",
     "    ! is.null(adj_tree[[i]][[jstr]])\n",
     "}\n"
@@ -106,10 +159,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "do_sim <- function(n, k) {\n",
@@ -183,10 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "sim_data_df <- do.call(rbind, lapply(c(1, 5, 10, 100), \n",
@@ -197,7 +246,6 @@
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -269,7 +317,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.2.2"
+   "version": "3.4.1"
   }
  },
  "nbformat": 4,
