--- a/class05_find_python3.ipynb
+++ b/class05_find_python3.ipynb
@@ -81,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_edge_list(edge_list, i, j):\n",
-    "    return [i,j] in edge_list or [j,i] in edge_list"
+    "    return (([i,j] in edge_list) or ([j,i] in edge_list))"
    ]
   },
   {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,12 +154,24 @@
     "    for _ in itertools.repeat(None, nrep):\n",
     "      \n",
     "        # make the random undirected graph\n",
-    "        g = igraph.Graph.Barabasi(n, k)\n",
+    "        g = igraph.Graph.Barabasi(n, k)       \n",
     "        \n",
     "        # get the graph in three different representations\n",
+    "        g_matrix = np.matrix(g.get_adjacency().data)\n",
+    "\n",
     "        g_adj_list = g.get_adjlist()\n",
     "        \n",
     "        g_bst_forest = get_bst_forest(g_adj_list)\n",
+    "        \n",
+    "        start_time = timeit.default_timer()\n",
+    "        \n",
+    "        # inner loop only needs to go from i+1 to n, since the graph is undirected        \n",
+    "        for _ in itertools.repeat(None, nsubrep):\n",
+    "            for i in range(0, n):\n",
+    "                for j in range(i+1, n):\n",
+    "                    find_matrix(g_matrix, i, j)     \n",
+    "        \n",
+    "        matrix_elapsed = timeit.default_timer() - start_time\n",
     "        \n",
     "        start_time = timeit.default_timer()\n",
     "        \n",
@@ -181,7 +193,7 @@
     "                    \n",
     "        forest_elapsed = timeit.default_timer() - start_time\n",
     "        \n",
-    "        retlist.append([adjlist_elapsed, forest_elapsed])\n",
+    "        retlist.append([matrix_elapsed, adjlist_elapsed, forest_elapsed])\n",
     "\n",
     "        # get the results in microseconds, and make sure to divide by number of vertex pairs\n",
     "    return 1000000*np.mean(np.array(retlist), axis=0)/(n*(n-1)/2)"
@@ -196,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.33853717,  1.41650156])"
+       "array([ 1.13781991,  0.33787408,  1.41892885])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,16 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.52836246,  1.55034855])"
+       "array([ 1.13926099,  0.52187028,  1.52568663])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,16 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.88398836,  1.66541568])"
+       "array([ 1.13888197,  0.86812382,  1.63835081])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,16 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1.76038888,  1.78242313])"
+       "array([ 1.14737513,  1.76272713,  1.77698432])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,16 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 3.02291221,  1.86780588])"
+       "array([ 1.14888451,  3.03352372,  1.85326944])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,13 +305,6 @@
    "source": [
     "do_sim(1000,100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
