--- a/class05_find_R.ipynb
+++ b/class05_find_R.ipynb
@@ -25,29 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: 'igraph'\n",
-      "\n",
-      "The following objects are masked from 'package:stats':\n",
-      "\n",
-      "    decompose, spectrum\n",
-      "\n",
-      "The following object is masked from 'package:base':\n",
-      "\n",
-      "    union\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "library(igraph)"
+    "suppressPackageStartupMessages(library(igraph))"
    ]
   },
   {
@@ -159,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -255,10 +237,10 @@
        "<table>\n",
        "<thead><tr><th scope=col>matrix</th><th scope=col>adjlist</th><th scope=col>adjforest</th></tr></thead>\n",
        "<tbody>\n",
-       "\t<tr><td>11.707708</td><td> 20.54855</td><td> 9.641642</td></tr>\n",
-       "\t<tr><td> 9.001001</td><td> 26.37037</td><td> 9.545546</td></tr>\n",
-       "\t<tr><td> 9.609610</td><td> 32.36036</td><td>12.324324</td></tr>\n",
-       "\t<tr><td>12.668669</td><td>211.56356</td><td>10.978979</td></tr>\n",
+       "\t<tr><td>5.421421 </td><td> 9.417417</td><td>5.029029 </td></tr>\n",
+       "\t<tr><td>5.381381 </td><td>13.781782</td><td>5.341341 </td></tr>\n",
+       "\t<tr><td>5.325325 </td><td>18.986987</td><td>5.205205 </td></tr>\n",
+       "\t<tr><td>5.493493 </td><td>97.473473</td><td>6.334334 </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -266,34 +248,29 @@
        "\\begin{tabular}{lll}\n",
        " matrix & adjlist & adjforest\\\\\n",
        "\\hline\n",
-       "\t 11.707708 &  20.54855 &  9.641642\\\\\n",
-       "\t  9.001001 &  26.37037 &  9.545546\\\\\n",
-       "\t  9.609610 &  32.36036 & 12.324324\\\\\n",
-       "\t 12.668669 & 211.56356 & 10.978979\\\\\n",
+       "\t 5.421421  &  9.417417 & 5.029029 \\\\\n",
+       "\t 5.381381  & 13.781782 & 5.341341 \\\\\n",
+       "\t 5.325325  & 18.986987 & 5.205205 \\\\\n",
+       "\t 5.493493  & 97.473473 & 6.334334 \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
-       "1. 11.7077077077076\n",
-       "2. 9.00100100099937\n",
-       "3. 9.60960960960815\n",
-       "4. 12.6686686686713\n",
-       "5. 20.548548548547\n",
-       "6. 26.3703703703713\n",
-       "7. 32.3603603603617\n",
-       "8. 211.563563563563\n",
-       "9. 9.64164164164307\n",
-       "10. 9.5455455455456\n",
-       "11. 12.324324324326\n",
-       "12. 10.9789789789797\n",
+       "\n",
+       "matrix | adjlist | adjforest | \n",
+       "|---|---|---|---|\n",
+       "| 5.421421  |  9.417417 | 5.029029  | \n",
+       "| 5.381381  | 13.781782 | 5.341341  | \n",
+       "| 5.325325  | 18.986987 | 5.205205  | \n",
+       "| 5.493493  | 97.473473 | 6.334334  | \n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "     matrix    adjlist   adjforest\n",
-       "[1,] 11.707708  20.54855  9.641642\n",
-       "[2,]  9.001001  26.37037  9.545546\n",
-       "[3,]  9.609610  32.36036 12.324324\n",
-       "[4,] 12.668669 211.56356 10.978979"
+       "     matrix   adjlist   adjforest\n",
+       "[1,] 5.421421  9.417417 5.029029 \n",
+       "[2,] 5.381381 13.781782 5.341341 \n",
+       "[3,] 5.325325 18.986987 5.205205 \n",
+       "[4,] 5.493493 97.473473 6.334334 "
       ]
      },
      "metadata": {},
