fixed comment to specify using the clusters method

--- a/class08_components_python3.ipynb
+++ b/class08_components_python3.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "# call the `components` method on the `ppi_igraph` object, and assign the \n",
+    "# call the `clusters` method on the `ppi_igraph` object, and assign the \n",
     "# resulting `VertexClustering` object to have object name `ppi_components`\n",
     "ppi_components = ppi_igraph.clusters()\n",
     "\n",
