--- a/class08_components_python3_template.ipynb
+++ b/class08_components_python3_template.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "# call the `components` method on the `ppi_igraph` object, and assign the \n",
+    "# call the `clusters` method on the `ppi_igraph` object, and assign the \n",
     "# resulting `VertexClustering` object to have object name `ppi_components`\n",
     "\n",
     "# call the `sizes` method on the `ppi_components` object, and assign the\n",
