--- a/class09_bfs_python3.ipynb
+++ b/class09_bfs_python3.ipynb
@@ -77,10 +77,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/ipykernel_launcher.py:1: DeprecationWarning: Graph.get_adjedgelist() is deprecated since igraph 0.6, please use Graph.get_inclist() instead\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 1, 2, 3, 5, 7], [0, 4], [1], [2], [3, 6], [4, 8], [5], [6], [7], [8]]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.get_adjedgelist()"
+   ]
   },
   {
    "cell_type": "code",
