--- a/class09_bfs_python3.ipynb
+++ b/class09_bfs_python3.ipynb
@@ -157,7 +157,7 @@
     "    # get the distance to cur_vertex_num, from the \"distances\" array\n",
     "    # get the neighbors of vertex cur_vertex_num in the graph, using the igraph \"neighbors\" func\n",
     "    # for each vertex_neighbor in the array vertex_neighbors\n",
-    "    #    if the distances[vertex_neighbor] is not NA:\n",
+    "    #    if the distances[vertex_neighbor] is nan:\n",
     "    #         (1) set the distance to vertex_neighbor (in \"distances\" vector) to the distance to\n",
     "    #           cur_vertex_num, plus one\n",
     "    #         (2) add neighbor to the queue\n",
@@ -194,6 +194,33 @@
    "source": [
     "bfs_single_vertex(g, 0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 1, 1, 1, 2, 1, 2, 1, 3]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[len(x) - 1 for x in g.get_shortest_paths(v=0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
