--- a/class10_closeness_R_template.ipynb
+++ b/class10_closeness_R_template.ipynb
@@ -96,10 +96,12 @@
    "outputs": [],
    "source": [
     "N <- length(V(grn_igraph))\n",
-    "harmonic_closeness_centralities <- sapply(V(grn_igraph),\n",
-    "                                            function(my_vertex) {\n",
-    "                                                my_dists <- distances(grn_igraph, v=my_vertex)\n",
-    "                                                sum(1/my_dists[my_dists > 0])/(N-1)\n",
+    "harmonic_closeness_centralities <- # sapply over V(grn_igraph) a function with argument my_vertex:\n",
+    "\n",
+    "                                            # compute my_dists using `distances` function on `grn_igraph` specifying \n",
+    "                                            # the starting vertex as my_vertex\n",
+    "                                            \n",
+    "                                            # compute the sum of 1/my_dists, including only my_dists > 0; divide by N-1\n",
     "                                          })"
    ]
   },
@@ -165,35 +167,6 @@
    "metadata": {},
    "source": [
     "which protein has the highest closeness centrality in the network? (hint: use `which.max`)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<strong>CYP26A1:</strong> 0.707169001196593"
-      ],
-      "text/latex": [
-       "\\textbf{CYP26A1:} 0.707169001196593"
-      ],
-      "text/markdown": [
-       "**CYP26A1:** 0.707169001196593"
-      ],
-      "text/plain": [
-       " CYP26A1 \n",
-       "0.707169 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "harmonic_closeness_centralities[which.max(harmonic_closeness_centralities)]"
    ]
   },
   {
