--- a/class10_closeness_python3_template.ipynb
+++ b/class10_closeness_python3_template.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a undirected graph in igraph, from the dataframe edge-list, using `Graph.TupleList` and specifying `directed=False`. Print out the graph summary using the `summary` instance method."
+    "Create an undirected graph in igraph, from the dataframe edge-list, using `Graph.TupleList` and specifying `directed=False`. Print out the graph summary using the `summary` instance method."
    ]
   },
   {
@@ -129,16 +129,14 @@
     "    \n",
     "    # compute the geodesic distance to every other vertex, from my_vertex, using the `shortest_paths` instance method;\n",
     "    # put it in a numpy.array\n",
-    "    my_dists = numpy.array(my_vertex.shortest_paths())\n",
     "    \n",
     "    # filter the numpy array to include only entries that are nonzero and finite, using `> 0 & numpy.isfinite(...)`\n",
-    "    my_dists = my_dists[numpy.isfinite(my_dists) & (my_dists > 0)]\n",
     "    \n",
     "    # if there are any distance values that survived the filtering, take their element-wise reciprocals, \n",
     "    # then compute the sum, then divide by N-1 (following Eq. 7.30 in Newman)\n",
-    "    if len(my_dists) > 0:\n",
-    "        closeness_centralities[ctr] = numpy.sum(1/my_dists)/(N-1)\n",
-    "    ctr += 1\n",
+    "\n",
+    "    # increment the counter\n",
+    "\n",
     "    \n",
     "# compute the elapsed time\n",
     "ci_elapsed = timeit.default_timer() - start_time\n",
@@ -252,22 +250,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['CYP26A1', 'TCF3', 'LEF1', 'MYC', 'MAZ', 'FOXO4', 'MAX', 'PAX4', 'SREBF1']"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "grn_igraph.vs[numpy.argsort(closeness_centralities)[::-1][0:9].tolist()][\"name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer should be:\n",
+    "`['CYP26A1', 'TCF3', 'LEF1', 'MYC', 'MAZ', 'FOXO4', 'MAX', 'PAX4', 'SREBF1']`"
    ]
   },
   {
