--- a/class12_pagerank_python3_template.ipynb
+++ b/class12_pagerank_python3_template.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,9 +94,7 @@
    "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pageranks = numpy.array(neph_graph.pagerank())"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -128,10 +126,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "print(numpy.max(pageranks))\n",
-    "neph_graph.vs[numpy.argmax(pageranks)]"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -180,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,8 +208,12 @@
     "            # set the column to zero\n",
     "            M[:,j] = 0\n",
     "            \n",
-    "    # use Equation on the board\n",
-    "    pr = numpy.linalg.inv(numpy.diag([1.]*N) - alpha * M) * numpy.matrix([beta]*N).transpose()\n",
+    "    # use Equation on the board to compute the pagerank vector \"pr\"\n",
+    "    \n",
+    "    \n",
+    "    # normalize the \"pr\" vector to one\n",
+    "    pr = pr/sum(pr)\n",
+    "    \n",
     "    return(pr.transpose())"
    ]
   },
@@ -227,23 +226,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.2778626  0.1480916  0.2778626  0.1480916  0.1480916]]\n",
-      "[0.2778625954198473, 0.14809160305343513, 0.2778625954198473, 0.14809160305343513, 0.1480916030534351]\n"
+      "[[ 0.37163798  0.25279461  0.14960966  0.1327793   0.09317846]]\n",
+      "[0.3716379775295785, 0.2527946075297947, 0.149609658704058, 0.1327793000565404, 0.09317845618002835]\n"
      ]
     }
    ],
    "source": [
-    "g = igraph.Graph.Barabasi(n=5, m=2) \n",
+    "g = igraph.Graph.Barabasi(n=5, m=2, directed=True) \n",
     "print(pagerank(g))\n",
     "print(g.pagerank())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
