--- a/class17_partyhubs_python3.ipynb
+++ b/class17_partyhubs_python3.ipynb
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we'll need to get the igraph vertex index values of the proteins that are date hubs or party hubs. To do this, first, we need to get a vector of length N (where N=1344) containing the string \"date\" or \"party\", where having the string \"date\" in element `i` of the vector means that vertex `i` in the `Graph` object is a \"date hub\" (similary, if element `i` of the vector contains the string \"party\", that means that vertex `i` in the `Graph` object is a \"party hub\"). We'll start by using the `pandas.DataFrame.merge` function to find the index value that each hub protein (in the vector `hub_data$Protein`) has in the vector of protein names of vertices in the `Graph` object (`V(ppi_graph)$name`).  (Hint: to compute the vector of index values where each element of vector `x` appears in vector `y`, you would do: `match(x,y)`)"
+    "Generate a list of the names of the proteins in the order of the proteins' corresponding vertices in the igraph `Graph` object"
    ]
   },
   {
@@ -340,31 +340,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AAR2',\n",
-       " 'PRP8',\n",
-       " 'ABP1',\n",
-       " 'SRV2',\n",
-       " 'ACT1',\n",
-       " 'RVS167',\n",
-       " 'IQG1',\n",
-       " 'AIP1',\n",
-       " 'COF1',\n",
-       " 'OYE2']"
+       "['AAR2', 'PRP8', 'ABP1', 'SRV2', 'ACT1', 'RVS167', 'IQG1', 'AIP1', 'COF1']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[graph_vertices[i] for i in range(0,10)]"
+    "graph_vertices[0:9]"
    ]
   },
   {
@@ -474,7 +465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's use the `pandas.DataFrame.merge` method on the `graph_vertices_df` object to pull in the hub type (date or party) for vertices that are hubs, by passing `hub_data` to `merge`.  Don't forget to specify `how='outer'` and `on=\"protein\"`:"
+    "Let's use the `pandas.DataFrame.merge` method on the `graph_vertices_df` object to pull in the hub type (date or party) for vertices that are hubs, by passing `hub_data` to `merge`.  Don't forget to specify `how='outer'` and `on=\"Protein\"`:"
    ]
   },
   {
