--- a/class17_partyhubs_python3_template.ipynb
+++ b/class17_partyhubs_python3_template.ipynb
@@ -316,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we'll need to get the igraph vertex index values of the proteins that are date hubs or party hubs. To do this, first, we need to get a vector of length N (where N=1344) containing the string \"date\" or \"party\", where having the string \"date\" in element `i` of the vector means that vertex `i` in the `Graph` object is a \"date hub\" (similary, if element `i` of the vector contains the string \"party\", that means that vertex `i` in the `Graph` object is a \"party hub\"). We'll start by using the `pandas.DataFrame.merge` function to find the index value that each hub protein (in the vector `hub_data$Protein`) has in the vector of protein names of vertices in the `Graph` object (`V(ppi_graph)$name`).  (Hint: to compute the vector of index values where each element of vector `x` appears in vector `y`, you would do: `match(x,y)`)"
+    "Generate a list of the names of the proteins in the order of the proteins' corresponding vertices in the igraph `Graph` object"
    ]
   },
   {
@@ -326,6 +326,27 @@
    "outputs": [],
    "source": [
     "graph_vertices = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'graph_vertices' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-53f272906047>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgraph_vertices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'graph_vertices' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "graph_vertices[0:10]"
    ]
   },
   {
@@ -462,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's use the `pandas.DataFrame.merge` method on the `graph_vertices_df` object to pull in the hub type (date or party) for vertices that are hubs, by passing `hub_data` to `merge`.  Don't forget to specify `how='outer'` and `on=\"protein\"`:"
+    "Let's use the `pandas.DataFrame.merge` method on the `graph_vertices_df` object to pull in the hub type (date or party) for vertices that are hubs, by passing `hub_data` to `merge`.  Don't forget to specify `how='outer'` and `on=\"Protein\"`:"
    ]
   },
   {
